@@ -170,6 +170,7 @@ Gabriele Gallacci                     <infouser@gallacci.com>
 Fabrizio Vanzani                      <fabrizio@vanzani.it>
 Dennis-Jan Broerse                    <dennisjan@ibuildings.nl>
 Gustavo Espinosa Tavitas              <gespinos@webindex.com.mx>
+Eldad Ran                             <eldad@tele-concept.com>
 
 Names between [] are the names they are refered by in the CHANGES file. (If
 different from their first name).
