@@ -29,6 +29,7 @@ Changes in ATK 5.2.0
 + Added "view all" link to navigation links when searching [Boy]
 + If PHP's sessionid is corrupted, ATK no longer displays an error. [Boy]
 + atkManyBoolRelation can now be properly hidden. (bug #428) [Yury]
++ Added MySQL 4.1+ driver (handles transactions etc.) (bug 434) [Eldad]
 * Fixed typo in php version check. [Ivo]
 * Fixed bug in cascade delete. (bug #419) [Ivo]
 * atkManyToOneRelation no longer searches on primary key values and 
